--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
