--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Add AWS Dependencies
+    // AWS Mobile SDK for Android
+    def aws_version = '2.15.+'
+    implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
+    implementation "com.amazonaws:aws-android-sdk-auth-core:$aws_version@aar"
+    implementation "com.amazonaws:aws-android-sdk-auth-ui:$aws_version@aar"
+    implementation "com.amazonaws:aws-android-sdk-auth-userpools:$aws_version@aar"
+    implementation "com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.69.0"
+    implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
+    implementation "com.amazonaws:aws-android-sdk-rekognition:$aws_version"
 }
