--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.aws_team15_final"
-        minSdk 26
-        targetSdk 33
+        minSdkVersion 26
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
