--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.amplifyframework:aws-auth-cognito:2.8.4'
+    implementation 'com.amplifyframework:aws-geo-location:2.8.4'
+
+    // Add this dependency to integrate MapLibre into your app
+    implementation 'com.amplifyframework:maplibre-adapter:2.8.4'
+
+
 }
