Amplify Sign in

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.amplifyframework:aws-auth-cognito:2.8.4'
 
     //Add AWS Dependencies
     // AWS Mobile SDK for Android
