--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="api key~" />
+            android:value="I don't tell you" />
 
         <activity
             android:name=".FindSnackActivity"
