--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
 //    implementation 'com.amplifyframework:aws-datastore:2.9.4'
       implementation 'com.amplifyframework:core:1.38.5'
       implementation 'com.amplifyframework:aws-api:1.38.5'
+      implementation 'com.amplifyframework:aws-storage-s3:1.38.5'
       implementation 'com.amplifyframework:aws-auth-cognito:1.38.5'
       implementation 'com.amplifyframework:aws-datastore:1.38.5'
     // Support for Java 8 features
