--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
 
@@ -40,6 +41,9 @@
             android:exported="false" />
         <activity
             android:name=".GrabCheckActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GetQRCodeActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
